--- a/backend/src/main/webapp/app/views/working/tab_forecast.html
+++ b/backend/src/main/webapp/app/views/working/tab_forecast.html
@@ -39,8 +39,8 @@
 				<th style="width: 10%; text-align: center; white-space: nowrap;">ยอดนัดชำระ</th>
 				<th style="width: 10%; text-align: center; white-space: nowrap;">เปอร์เซ็นการชำระ</th>
 				<th style="width: 10%; text-align: center; white-space: nowrap;">ยอดชำระจริง</th>
-				<th style="text-align: center;">หมายเหตุ</th>
-				<th style="text-align: center;">ผู้บันทึก</th>
+				<th style="text-align: center; white-space: nowrap;">หมายเหตุ</th>
+				<th style="text-align: center; white-space: nowrap;">ผู้บันทึก</th>
 				<th style="width: 80px; text-align: center;"></th>
 			</tr>
 		<thead>
