--- a/backend/src/main/webapp/app/views/working/tab_forecast.html
+++ b/backend/src/main/webapp/app/views/working/tab_forecast.html
@@ -53,15 +53,16 @@
 				</td>
 				<td style="white-space: nowrap; vertical-align: middle; text-align: center;">{{ item.createdDateTime | date:gb_dateTimeFormat }}</td>
 		      	<td style="white-space: nowrap; vertical-align: middle;">
-			        <span editable-select="item.payTypeId" e-name="payTypeId" e-form="rowform" e-required e-ng-options="s.id as s.name for s in forecastObj.payTypeList" e-ng-change="item.payTypeId = $data">
-			        	{{ item.payTypeId ? (forecastObj.payTypeList | filter:{id:item.payTypeId})[0].name : ''}}
+			        <span editable-select="item.payTypeName" e-name="payTypeName" e-form="rowform" e-required e-ng-options="s for s in forecastObj.payTypeList" e-ng-change="item.payTypeName = $data">
+			        	<!-- {{ item.payTypeId ? (forecastObj.payTypeList | filter:{id:item.payTypeId})[0].name : ''}} -->
+			        	{{ item.payTypeName }}
 			        </span>
 		      	</td>
 		      	<td style="white-space: nowrap; vertical-align: middle; text-align: center;">
-			        <span editable-text="item.round" e-name="round" e-type="number" e-form="rowform" e-ng-show="item.payTypeId == 2" e-style="width: 50px;" e-title="งวดที่">
-			        	{{ item.payTypeId == 2 ? ((item.round && item.totalRound) ? (item.round + '/' + item.totalRound) : '') : '-' }}
+			        <span editable-text="item.round" e-name="round" e-type="number" e-form="rowform" e-ng-show="item.payTypeName == 'ผ่อนชำระ'" e-style="width: 50px;" e-title="งวดที่">
+			        	{{ item.payTypeName == 'ผ่อนชำระ' ? ((item.round && item.totalRound) ? (item.round + '/' + item.totalRound) : '') : '-' }}
 			        </span>&nbsp;
-			        <span editable-text="item.totalRound" e-name="totalRound" e-type="number" e-form="rowform" e-ng-show="item.payTypeId == 2" e-style="width: 50px;" e-title="จำนวนงวดทั้งหมด"></span>
+			        <span editable-text="item.totalRound" e-name="totalRound" e-type="number" e-form="rowform" e-ng-show="item.payTypeName == 'ผ่อนชำระ'" e-style="width: 50px;" e-title="จำนวนงวดทั้งหมด"></span>
 		      	</td>
 		      	<td style="white-space: nowrap; vertical-align: middle; text-align: center;" ng-class="{'has-error':appointDateErr}">
 			        <span e-title="กรุณากรอกข้อมูล" editable-text="item.appointDate" e-readonly="readonly" e-name="appointDate" e-form="rowform" e-class="form-control" e-date-parser="dd/MM/yyyy" e-my-datepicker="datePickerOptions">
